modules/un/unpublished_node_permissions/1.7.x/agent/start.md
<!-- SPDX-License-Identifier: GPL-2.0-or-later -->
# Unpublished Node Permissions — agent index

Adds **per-content-type** "view unpublished content" permissions and enforces them through the
node access grant system. No config, no settings form (`configure: null`), no Drush. Depends on
core **node**.

- **The permissions it defines, the grant realms, Views integration, and how to grant/rebuild** →
  [permissions/permissions.md](permissions/permissions.md)

Key facts:
- Static permission: `view unpublished content` (title "View any unpublished content").
- Dynamic per type: `view <type> unpublished content` (e.g. `view article unpublished content`),
  generated by `UnpublishedNodePermissions::nodeTypePermissions` (permission_callback).
- Enforcement: `hook_node_access_records()` + `hook_node_grants()` over realms
  `view_unpublished_<type>_node`, `view_unpublished_any`, `view_unpublished_author`.
- After enabling or changing these permissions, rebuild grants:
  `drush php:eval 'node_access_rebuild();'`.
